test/corpus/variable_expansion.txt
================================================================================
Variable Expansion - simple expansion
================================================================================

$CMD

--------------------------------------------------------------------------------

(program
  (command
    name: (variable_expansion
      (variable_name))))

================================================================================
Variable Expansion - double expansion
================================================================================

$$CMD_REF

--------------------------------------------------------------------------------

(program
  (command
    name: (variable_expansion
      (variable_name))))

================================================================================
Variable Expansion - with escape sequence
================================================================================

\$$CMD_REF

--------------------------------------------------------------------------------

(program
  (command
    name: (concatenation
      (escape_sequence)
      (variable_expansion
        (variable_name)))))
